# AdobeFirewallBlocker

./: CMakeLists.txt  README.md
src/: firewall_manager.cpp  firewall_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.rc  software_scanner.cpp  software_scanner.h
src/ui/: mainwindow.ui
